nate's RPS edits

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <button onclick="userRock()" id="rock">rock</button>
+        <button onclick="userInput(0)" id="rock">rock</button>
         <!-- <p onclick="myFunction()" id="demo">Click me</p> -->
-        <button onclick="userPaper()" id="paper">paper</button>
+        <button onclick="userInput(1)" id="paper">paper</button>
         
-        <button onclick="userScissors()" id="scissors">scissors</button>
+        <button onclick="userInput(2)" id="scissors">scissors</button>
         
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
